added prompt and if statement for password length

--- a/index.html
+++ b/index.html
@@ -32,3 +32,9 @@
     <script src="script.js"></script>
   </body>
 </html>
+<!-- main points:
+must adapt to multiple screen sizes
+length at least 10 but no more than 64
+password displayed in an alert or written to the page
+README file
+-->
